# copilot-desktop

./: AGENTS.md  CHANGELOG.md  README.md  index.html  package.json  pnpm-lock.yaml  vitest.config.ts
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  types.rs
src-tauri/src/auth/: mod.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/config/: mod.rs
src-tauri/src/files/: mod.rs  watcher.rs
src-tauri/src/mcp/: mod.rs
src-tauri/src/plugins/: mod.rs
src-tauri/src/pty/: manager.rs  mod.rs  parser.rs
src-tauri/src/session/: manager.rs  mod.rs
src/__mocks__/: setup.ts
src/components/auth/: LoginScreen.tsx
src/components/chat/: ChatPanel.tsx  CodeBlock.tsx  InputArea.tsx  MessageBubble.tsx  StreamingIndicator.tsx
src/components/files/: DiffViewer.tsx  FileTree.tsx
src/components/layout/: CommandPalette.tsx  InspectorPanel.tsx  MainPanel.tsx  ProjectPicker.tsx  Sidebar.tsx  Titlebar.tsx  Toolbar.tsx
src/components/mcp/: McpManager.tsx  McpServerCard.tsx  McpServerForm.tsx
src/components/plugins/: PluginCard.tsx  PluginDetails.tsx  PluginMarketplace.tsx
src/components/session/: SessionList.tsx  SessionTabs.tsx
src/components/settings/: KeyboardShortcuts.tsx  ModeSwitch.tsx  (+4 more)
src/hooks/: useAuth.ts  useCopilot.ts  useKeyboard.ts
src/lib/: tauri.ts
src/stores/: authStore.ts  chatStore.ts  fileStore.ts  mcpStore.ts  pluginStore.ts  sessionStore.ts  settingsStore.ts
src/types/: index.ts
(+5 files in other folders)
