[package]
name = "copilot-desktop"
version = "0.1.0"
description = "Desktop UI for GitHub Copilot CLI"
authors = ["Giulio Leone"]
license = "GPL-3.0"
repository = "https://github.com/g97iulio1609/copilot-desktop"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-window-state = "2"
tokio = { version = "1", features = ["full"] }
portable-pty = "0.9"
strip-ansi-escapes = "0.2"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
which = "7"
notify = "8"
dirs = "5"
